# aulaYesodNova

./: Application.hs  Cliente.hs  Foundation.hs  Home.hs  Main.hs  aula.cabal  client_session_key.aes  curls  dummy.cabal  routes  stack.yaml
elm/: Cliente.elm  client_session_key.aes
elm/elm-stuff/build-artifacts/0.18.0/user/project/1.0.0/: Cliente.elmi  Cliente.elmo
templates/: Cliente.julius
